--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7962,7 +7962,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   .left-addon input {
-    padding-top: 3px !important;
+    padding-top: 5px !important;
     padding-bottom: 2px;
   }
 
@@ -8012,6 +8012,7 @@ col-xs-12, .faculty-staff-students {
     margin-top: 0em;
     padding-top: 0em;
     margin-left: 2em;
+    padding-left: 1.2em;
   }
 
   .visit-give-mobile, .apply-mobile {
@@ -8020,7 +8021,7 @@ col-xs-12, .faculty-staff-students {
 }
 @media (min-width: 992px) {
   body {
-    padding-top: 123px;
+    padding-top: 122px;
   }
 
   .msudenver_logo {
@@ -8211,6 +8212,10 @@ col-xs-12, .faculty-staff-students {
     padding-right: 0px;
   }
 
+  .msudenver_logo {
+    max-height: 100px;
+  }
+
   #content-nav #nav-search-close {
     top: -3.2em;
     left: 18em;
@@ -8259,7 +8264,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   .msudenver_logo {
-    max-height: 150px;
+    max-height: 100px;
   }
 
   li.dropdown {
@@ -8358,6 +8363,10 @@ col-xs-12, .faculty-staff-students {
     height: 30px;
     width: 130px;
     left: 19em;
+  }
+
+  .msudenver_logo {
+    max-height: 150px;
   }
 
   .search-button {
