--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -833,6 +833,9 @@ col-xs-12, .faculty-staff-students {
       left: 17em;
   }
 
+  body {
+    padding-top: 122px;
+  }
 
   a .pushdown-menu {
       font-weight: 500;
@@ -938,6 +941,10 @@ col-xs-12, .faculty-staff-students {
   .pushdown-menu {
       height: 19em;
   }
+  body {
+    padding-top: 144px;
+  }
+
 }
 
 @media only screen and (min-width:1500px) {
