--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -1,6 +1,6 @@
 .btn {
     // border-radius: 0;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
     // font-weight: 100!important;
     transition: opacity 250ms ease-in-out;
     // box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
