--- a/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_HighlightBox.scss
@@ -3,7 +3,7 @@
   color: #fff;
   padding: 1.5em;
   margin-bottom: 1.5em;
-  background: grey;
+  background: #4e5462;
   position: relative;
   // zoom: 1;
   // -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
