--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -30,7 +30,7 @@
   color:black;
   font-size:1.2rem;
   font-weight:700;
-  padding: 15px 20px;
+  padding: 15px 0px;
   line-height: 1em;
   display: block;
   line-height: 1em;
@@ -152,7 +152,7 @@
   // background: #002856;
     ul li {
       list-style-type: none;
-      border-bottom: 1px solid gray;
+      border-bottom: 1px solid rgba(128, 128, 128, 0.3);
       // border-width: 100%;
     }
 
