--- a/development/terminalfour/src/sass/ContentTypes/_PresidentMessages.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_PresidentMessages.scss
@@ -9,63 +9,63 @@
   height: 100%;
 }
 .presidentsheader-orange {
-  background-image: linear-gradient(#f39c12, #d78b13);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-teal {
-  background-image: linear-gradient(#16a085, #008d71);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-blue {
-  background-image: linear-gradient(#3498db, #0476c2);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-purple {
-  background-image: linear-gradient(#9b59b6, #8e44ad);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-green {
-  background-image: linear-gradient(#2ecc71, #27ae60);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-gray {
-  background-image: linear-gradient(#34495e, #2c3e50);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-lightgray {
-  background-image: linear-gradient(#95a5a6, #7f8c8d);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-orangered {
-  background-image: linear-gradient(#e74c3c, #c0392b);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
   height: 100%;
 }
 .presidentsheader-pumpkin {
-  background-image: linear-gradient(#d35400, #b04600);
+  background: #00447c;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 25px;
