--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
@@ -48,7 +48,7 @@ $link-hover-decoration: underline !default;
 //## Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:  "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:       "Gotham A", "Gotham B", "Georgia", "Times New Roman", Times, serif !default;
+$font-family-serif:       "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-serif !default;
