add fa-angle-right to active menu item

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -9476,6 +9476,15 @@ a:focus, a:hover {
   font-size: 1.2em;
 }
 
+.currentbranch0 a:after, .currentbranch1 a:after, .currentbranch2 a:after, .currentbranch3 a:after, .currentbranch4 a:after {
+  content: "\f105";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  float: right;
+}
+
 @media (max-width: 767px) {
   #layout.active {
     position: relative;
