remove unneeded <div>

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -91,7 +91,7 @@
                <li id="nav-athletics">
                  <a href="" class="mobile-alumni athletics-header">Athletics</a>
                </li>
-               <li id="nav-search"><div><span class="fa fa-search search-desktop"></span></div></li>
+               <li id="nav-search"><span class="fa fa-search search-desktop"></span></li>
         <!-- Hidden Search Bar-->
               <form action="https://www.msudenver.edu/search">
                 <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
