--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -8491,9 +8491,7 @@ col-xs-12, .faculty-staff-students {
   padding-bottom: 36px;
   padding-bottom: 2.57143rem;
   background-color: #000;
-  text-align: center;
-  font-family: 'Gotham A', 'Gotham B';
-  font-weight: 600;
+  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .homepage-feature:before, .homepage-feature:after {
   content: " ";
