reorder <li><a> in pushdown list items; fix pipe (|) in faculty-staff-students links

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -16,8 +16,8 @@
               <a href="https://msudenver.edu/visit/"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
               <span class="fa fa-search fa-search-mobile"></span>
               <div class="col-xs-12 faculty-staff-students">
-                <a href="">Current Students |</a>
-                <a href=""> Faculty &amp; Staff</a>
+                <a href="">Current Students</a><a class="faculty-staff-students">|</a>
+                <a href="">Faculty &amp; Staff</a>
               </div>
             </div>
         </div>
@@ -64,28 +64,28 @@
                <li id="nav-academics">
                  <a class="mobile-header mobile-academics"><span class="fa fa-chevron-down pull-right"></span>Academics</a>
                  <ul class="pushdown-menu pushdown-academics">
-                   <a href="/programs/"><li>Academic Programs</li></a>
-                   <a href="/las/"><li>College of Letters, Arts and Sciences</li></a>
-                   <a href="/cps/"><li>College of Professional Studies</li></a>
-                   <a href="/business/"><li>College of Business</li></a>
-                   <a href="/education/"><li>School of Education</li></a>
-                   <a href="/fys/"><li>First Year Success</li></a>
-                   <a href="#"><li>Academic Support</li></a>
-                   <a href="#"><li>Online Courses / Extended Campus</li></a>
-                   <a href="#"><li>Special Programs</li></a>
-                   <a href="#"><li>Student Engagement &amp; Wellness</li></a>
+                   <li><a href="/programs/">Academic Programs</a></li>
+                   <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
+                   <li><a href="/cps/">College of Professional Studies</a></li>
+                   <li><a href="/business/">College of Business</a></li>
+                   <li><a href="/education/">School of Education</a></li>
+                   <li><a href="/fys/">First Year Success</a></li>
+                   <li><a href="#">Academic Support</a></li>
+                   <li><a href="#">Online Courses / Extended Campus</a></li>
+                   <li><a href="#">Special Programs</a></li>
+                   <li><a href="#">Student Engagement &amp; Wellness</a></li>
                  </ul>
                </li>
                <li id="nav-alumni">
                  <a class="mobile-header mobile-alumni"><span class="fa fa-chevron-down pull-right"></span>Alumni</a>
                  <ul class="pushdown-menu pushdown-alumni menu-last">
-                   <a href="/alumni/"><li>Alumni</li></a>
-                   <a href="/alumni/careerservices/"><li>Career Services</li></a>
-                   <a href="/alumni/alumnibenefits/"><li>Alumni Benefits</li></a>
-                   <a href=""><li>MSU Denver Magazine</li></a>
-                   <a href="/alumni/continuingeducation/"><li>Continuing Education</li></a>
-                   <a href="/alumni/studentalumniassociation/"><li>Student Alumni Association</li></a>
-                   <a href=""><li>Alumni Events</li></a>
+                   <li><a href="/alumni/">Alumni</a></li>
+                   <li><a href="/alumni/careerservices/">Career Services</a></li>
+                   <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
+                   <li><a href="">MSU Denver Magazine</a></li>
+                   <li><a href="/alumni/continuingeducation/">Continuing Education</a></li>
+                   <li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li>
+                   <li><a href="">Alumni Events</a></li>
                  </ul>
                </li>
                <li id="nav-athletics">
