--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -16,7 +16,7 @@
               <a href="https://msudenver.edu/visit/"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
               <span class="fa fa-search fa-search-mobile"></span>
               <div class="col-xs-12 faculty-staff-students">
-                <a href="">Current Students</a><a class="faculty-staff-students">|</a>
+                <a href="">Current Students</a><a class="faculty-staff-students fss-pipe">|</a>
                 <a href="">Faculty &amp; Staff</a>
               </div>
             </div>
