--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -452,6 +452,10 @@
   display: none;
 }
 
+.fss-pipe {
+    padding-left: 10px !important;
+}
+
 col-xs-12, .faculty-staff-students {
   text-align: right;
 }
