adjust height of pushdown menu after fixing body line-height

--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -6,7 +6,7 @@ body {
   font-weight: 400;
   font-size: 1rem;
   color: #1e1e1e;
-  line-height: 1.6em;
+  // line-height: 1.6em;
   -webkit-font-smoothing: subpixel-antialiased!important;
   -ms-backface-visibility: hidden;
 
