--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -720,7 +720,7 @@ col-xs-12, .faculty-staff-students {
     top: 0em;
   }
   .pushdown-menu {
-      height: 22em;
+      height: 29em;
   }
   .fac-staf-stu-mobile {
     display: none;
@@ -881,7 +881,7 @@ col-xs-12, .faculty-staff-students {
     margin-right: 0em;
   }
   .pushdown-menu {
-      height: 22em;
+      height: 29em;
   }
 }
 
@@ -951,7 +951,7 @@ col-xs-12, .faculty-staff-students {
       padding-right: 4em;
   }
   .pushdown-menu {
-      height: 22em;
+      height: 27em;
   }
   body {
     padding-top: 144px;
@@ -998,5 +998,8 @@ col-xs-12, .faculty-staff-students {
   }
   .left-addon .fa-search {
     left: 1.5em;
+  }
+  .pushdown-menu {
+      height: 25em;
   }
 }
