removes old CDNs and separates online and extended campus link

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -1,5 +1,5 @@
   <!-- Global Header -->
-    <div class="navbar navbar-fixed-top toolbar blue-header" >
+    <div class="navbar navbar-fixed-top toolbar blue-header">
       <div class="header-container">
         <button type="search-button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
@@ -69,9 +69,8 @@
                    <li><a href="/education/">School of Education</a></li>
                    <li><a href="/fys/">First Year Success</a></li>
                    <li><a href="/campuslife/academicsupport">Academic Support</a></li>
-                   <!-- <li><a href="/academic/extended">Online Courses / Extended Campus</a></li> -->
-                   <li><a href="/academic/extended">Online Courses</a></li>
-                   <li><a href="/academic/extended">Extended Campus</a></li>
+                   <li><a href="/online/">Online Courses</a></li>
+                   <li><a href="/extendedcampus">Extended Campus</a></li>
                    <li><a href="/academics/specialprograms">Special Programs</a></li>
                    <li><a href="/studentengagementandwellness">Student Engagement &amp; Wellness</a></li>
                  </ul>
@@ -142,15 +141,6 @@
     </div>
 </header>
 
-
-<!--CDN-->
-
-<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
-<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
-<!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>-->
-<!--<link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>-->
-
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
 <script type="text/javascript">
 // make search button appear when text entered in search field
 $('#q').keyup(function () {
