updates logo and header background with final graphics

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -1,5 +1,5 @@
   <!-- Global Header -->
-    <div class="navbar navbar-fixed-top toolbar blue-header">
+    <div class="navbar navbar-fixed-top toolbar blue-header" style="background-image:url(https://msudenver.edu/media/newsiteassets/images/header_asphalt.png);">
       <div class="header-container">
         <button type="search-button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
@@ -7,10 +7,10 @@
         </button>
             <div class="row">
               <div class="col-xs-8">
-                <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
+                <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Logo">
               </div>
               <a href="/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
-              <a href="/give"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
+              <a href="/giving"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
               <a href="/visit"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
               <span class="fa fa-search fa-search-mobile"></span>
               <div class="col-xs-12 faculty-staff-students">
