--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -8188,6 +8188,14 @@ col-xs-12, .faculty-staff-students {
     padding-left: 0px;
     padding-right: 0px;
   }
+
+  .inner-addon .fa-search {
+    padding: 0.9em 1em 1em 1em;
+  }
+
+  .left-addon input {
+    padding-left: 4em;
+  }
 }
 .header-container {
   margin-right: auto;
