updates body padding-top

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -608,7 +608,7 @@ col-xs-12, .faculty-staff-students {
 @media (min-width: $screen-md-min) {
 
   body {
-    padding-top: 122px;
+    padding-top: 105px;
   }
   .msudenver_logo {
     max-height:100px;
@@ -820,8 +820,8 @@ col-xs-12, .faculty-staff-students {
       letter-spacing: 0px;
       font-weight: 600;
       font-size: 18px;
-      padding-right: 6em;
-      padding-left: 0em;
+      // padding-right: 6em;
+      // padding-left: 0em;
   }
 .msudenver_logo {
     max-height:100px;
@@ -847,7 +847,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   body {
-    padding-top: 122px;
+    padding-top: 90px;
   }
 
   a .pushdown-menu {
@@ -949,13 +949,13 @@ col-xs-12, .faculty-staff-students {
     width: 0em;
   }
   #content-nav{
-      padding-right: 4em;
+      // padding-right: 4em;
   }
   .pushdown-menu {
       height: 27em;
   }
   body {
-    padding-top: 144px;
+    padding-top: 122px;
   }
 
 }
