--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -8,6 +8,17 @@
   text-align: center;
 }
 
+.msudenver_logo, .msudenver_logo_change {
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.msudenver_logo_change {
+  height:102px;
+}
+
 .toolbar {
   z-index: 9999;
     .navbar-collapse {
@@ -319,7 +330,7 @@
 
 .msudenver_logo {
   padding: 15px 0px;
-  max-height:65px;
+  max-height:72px;
 }
 
 #search-input #search-text {
